--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -230,6 +230,10 @@
       padding: 27px 25px 21px;
       .fontsize(20px);
     }
+
+    @media (min-width: @desktop-width) {
+      padding-top: 25px;
+    }
   }
 
   &--select-clicked {
