--- a/source/less/blocks/calendar.less
+++ b/source/less/blocks/calendar.less
@@ -28,7 +28,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 28px 0 22px;
+    padding: 28px 0 21px;
   }
 }
 
@@ -64,7 +64,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 18px 16px;
+    padding: 18px 16px 20px;
   }
 
   &--weekend {
@@ -123,8 +123,9 @@
 
   @media (min-width: @desktop-width) {
     min-height: 71px;
-    padding: 15px 16px;
+    padding: 13px 15px 11px;
     text-align: left;
+    letter-spacing: 0.04em;
     color: @special-grey;
   }
 
@@ -156,7 +157,7 @@
 
 .calendar__text {
   display: none;
-  margin-top: 9px;
+  margin-top: 8px;
   font-weight: 400;
   font-size: 18px;
   line-height: 20px;
