--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -28,7 +28,6 @@
       order: 1;
       box-sizing: border-box;
       width: 732px;
-      margin-right: 100px;
       margin-bottom: 0;
     }
   }
@@ -53,13 +52,8 @@
       order: 2;
       min-width: 384px;
       margin-bottom: 0;
+      padding: 23px 25px 27px 28px;
     }
-  }
-}
-
-.info .info__fieldset {
-  @media (min-width: @desktop-width) {
-    margin-bottom: 0;
   }
 }
 
@@ -76,7 +70,7 @@
 
 .info__fieldset--tags .info__legend {
   @media (min-width: @desktop-width) {
-    left: 48px;
+    left: 62px;
   }
 }
 
