--- a/source/less/blocks/level-badge.less
+++ b/source/less/blocks/level-badge.less
@@ -68,13 +68,26 @@
     width: 96px;
     height: 96px;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 98px;
+    height: 98px;
+  }
 }
 
 .level-badge--user-profile .level-badge__number {
   top: 18px;
+
+  @media (min-width: @desktop-width) {
+    top: 21px;
+  }
 }
 
 .level-badge--user-profile .level-badge__label {
   top: 24px;
   padding: 7px 10px 0;
+
+  @media (min-width: @desktop-width) {
+    top: 23px;
+  }
 }
