--- a/source/less/blocks/plans.less
+++ b/source/less/blocks/plans.less
@@ -6,7 +6,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 54px 60px 131px 124px;
+    padding: 54px 60px 125px 124px;
   }
 }
 
@@ -17,5 +17,6 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 49px;
+    padding-left: 7px;
   }
 }
