--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -3,12 +3,13 @@
   box-sizing: border-box;
   width: 100%;
   margin: 0;
+  margin-bottom: 17px;
   padding: 27px 25px;
   border: 1px solid @special-grey-border;
   border-radius: 10px;
 
-  &:not(:last-of-type) {
-    margin-bottom: 17px;
+  :last-of-type {
+    margin-bottom: 0;
   }
 
   &--no-border {
@@ -68,9 +69,10 @@
     letter-spacing: 0.1em;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     margin-bottom: 0;
     padding-right: 57px;
+    letter-spacing: unset;
   }
 
   &--container {
@@ -82,11 +84,13 @@
   &--small {
     font-weight: 400;
     .fontsize(15px);
+    letter-spacing: unset;
     text-transform: none;
 
     @media (min-width: @tablet-width) {
       font-weight: 500;
       .fontsize(20px);
+      letter-spacing: 0.1em;
       text-transform: uppercase;
     }
 
@@ -129,7 +133,7 @@
     padding: 17px 24px 22px;
 
     @media (min-width: @tablet-width) {
-      padding: 35px 39px 10px;
+      padding: 33px 37px 11px;
     }
   }
 }
@@ -137,7 +141,7 @@
 .form__input {
   &--number {
     position: relative;
-    .move-up(-24px);
+    .move-up(-20px);
 
     @media (min-width: @tablet-width) {
       .move-up(-21px);
@@ -152,26 +156,101 @@
 
 .form__checkbox-kids {
   position: relative;
-  top: 110px;
+  top: 100px;
+  z-index: @z-index-checkbox-kids;
 
-  @media (min-width: @tablet-width) {
-    position: static;
-    padding-top: 32px;
+  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
+    top: 0;
+    padding-top: 14px;
+
+    &:last-of-type {
+      margin-bottom: 15px;
+    }
   }
 
   @media (min-width: @desktop-width) {
+    top: 1px;
+    right: -4px;
+    display: flex;
+    align-items: center;
     padding-top: 0;
+    letter-spacing: 0.1em;
   }
+}
+
+.form__checkbox-kids .form__checkbox {
+  position: relative;
+  top: 6px;
+  left: -3px;
+  width: 23px;
+  height: 23px;
+  margin-right: 7px;
+  outline: none;
+
+  @media (min-width: @tablet-width) {
+    top: 10px;
+    left: -3px;
+    width: 33px;
+    height: 33px;
+    margin-right: 15px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: -2px;
+    left: 0;
+    margin-right: 24px;
+  }
+}
+
+.form__checkbox-kids .form__label::before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 0;
+  display: block;
+  box-sizing: border-box;
+  width: 26px;
+  height: 26px;
+  background-color: @white;
+  border: 1px solid @special-grey-border;
+  border-radius: 4px;
+
+  @media (min-width: @tablet-width) {
+    top: 26px;
+    left: 0;
+    width: 36px;
+    height: 36px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: -1px;
+    left: 2px;
+  }
+}
+
+.form__checkbox-kids:hover .form__label::before {
+  border-color: @special-border-blue-fade;
+}
+
+.form__checkbox:focus + .form__label::before {
+  border-color: @special-border-blue-fade;
+  outline: Highlight auto 1px;
+  outline: -webkit-focus-ring-color auto 1px;
+}
+
+.form__checkbox:disabled + .form__label::before {
+  background-color: @special-bluegrey;
+  border-color: @special-bluegrey;
 }
 
 .form__input-days {
   position: relative;
   top: -25px;
-  margin-bottom: 44px;
+  margin-bottom: 24px;
 
   @media (min-width: @tablet-width) {
     position: static;
-    margin-bottom: 58px;
+    margin-bottom: 38px;
   }
 
   @media (min-width: @desktop-width) {
@@ -179,7 +258,7 @@
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
-    margin-bottom: 33px;
+    margin-bottom: 32px;
   }
 }
 
@@ -263,5 +342,9 @@
       border-right: 12px solid @special-blue-dark;
       transform: translateY(-73%);
     }
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 3px;
   }
 }
