--- a/source/less/blocks/step.less
+++ b/source/less/blocks/step.less
@@ -9,7 +9,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 101px 159px 106px 163px;
+    padding: 101px 162px 106px 159px;
     border-radius: 60px;
   }
 
@@ -21,9 +21,11 @@
   }
 
   &--first {
-    padding-bottom: 10px;
+    @media (max-width: @mobile-width-only) {
+      padding-bottom: 10px;
+    }
 
-    @media (min-width: @tablet-width) {
+    @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
       padding: 48px 40px 56px;
     }
   }
@@ -32,11 +34,21 @@
     @media (min-width: @tablet-width) {
       margin-bottom: 51px;
     }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 43px;
+      padding-top: 99px;
+      padding-bottom: 105px;
+    }
   }
 
   &--third {
     @media (min-width: @tablet-width) {
       padding-bottom: 53px;
+    }
+
+    @media (min-width: @tablet-width) {
+      padding-bottom: 103px;
     }
   }
 }
@@ -65,7 +77,9 @@
 }
 
 .step__number {
-  display: block;
+  @media (max-width: @tablet-width-only) {
+    display: block;
+  }
 }
 
 .step__description {
@@ -95,6 +109,10 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 37px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 54px;
+  }
 }
 
 .step--third .step__description {
@@ -110,22 +128,18 @@
 }
 
 .step__fieldset {
-  &:not(:last-of-type) {
-    margin-bottom: 15px;
-  }
+  margin-bottom: 9px;
 
   &:last-of-type {
     margin-bottom: 23px;
   }
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 15px;
     padding-top: 23px;
     border-top: 1px solid @special-grey-border-dark;
     border-radius: 0;
 
-    &:not(:last-of-type) {
-      margin-bottom: 31px;
-    }
 
     &:last-of-type {
       margin-bottom: 47px;
@@ -137,6 +151,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 14px;
     padding-top: 30px;
 
     &:not(:first-of-type) {
@@ -161,6 +176,12 @@
         margin-bottom: 6px;
       }
     }
+
+    @media (min-width: @desktop-width) {
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
   }
 
   &--descriptions {
@@ -174,6 +195,31 @@
       &:last-of-type {
         margin-bottom: 44px;
       }
+    }
+
+    @media (min-width: @desktop-width) {
+      padding-top: 94px;
+
+      &:last-of-type {
+        margin-bottom: 55px;
+      }
+    }
+  }
+}
+
+.step--second .step__buttons {
+  @media (min-width: @desktop-width) {
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 223px;
+      display: block;
+      width: 1px;
+      height: 95px;
+      background-color: @special-grey-border-dark;
     }
   }
 }
