Makes countries dropdown PP

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -234,8 +234,7 @@
 
 .form__checkbox:focus + .form__label::before {
   border-color: @special-border-blue-fade;
-  outline: Highlight auto 1px;
-  outline: -webkit-focus-ring-color auto 1px;
+  outline: auto 1px;
 }
 
 .form__checkbox:disabled + .form__label::before {
