Fixes typo in .step__description-break — now in Less file

--- a/source/less/blocks/step.less
+++ b/source/less/blocks/step.less
@@ -121,7 +121,7 @@
   }
 }
 
-.step_description-break {
+.step__description-break {
   @media (max-width: @mobile-width-only) {
     display: none;
   }
