--- a/source/less/blocks/step.less
+++ b/source/less/blocks/step.less
@@ -47,7 +47,7 @@
       padding-bottom: 53px;
     }
 
-    @media (min-width: @tablet-width) {
+    @media (min-width: @desktop-width) {
       padding-bottom: 103px;
     }
   }
@@ -104,7 +104,7 @@
 }
 
 .step--first .step__description {
-  margin-bottom: 17px;
+  margin-bottom: 20px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 37px;
@@ -161,6 +161,25 @@
 
     &:last-of-type {
       margin-bottom: 57px;
+    }
+  }
+
+  &--companions {
+    margin-bottom: 12px;
+
+    @media (min-width: @tablet-width) {
+      padding-top: 27px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 14px;
+      padding-top: 30px;
+    }
+  }
+
+  &--dates {
+    @media (min-width: @tablet-width) {
+      padding-top: 25px;
     }
   }
 
