--- a/source/less/blocks/number-input.less
+++ b/source/less/blocks/number-input.less
@@ -1,18 +1,15 @@
 .number-input {
   display: grid;
-  grid-template-areas: "empty empty units"
-    "minus number plus";
+  grid-template-areas: "minus number plus";
   grid-template-columns: 42px 1fr 42px;
-  grid-row-gap: 9px;
 
   @media (min-width: @tablet-width) {
     grid-template-columns: 50px 1fr 50px;
-    grid-row-gap: 24px;
   }
 
   @media (min-width: @desktop-width) {
-    grid-template-areas: "minus number plus units";
-    grid-template-columns: 43px 96px 43px min-content;
+    grid-template-areas: "minus number plus";
+    grid-template-columns: 43px 96px 43px;
     min-width: 254px;
   }
 }
@@ -76,41 +73,4 @@
 
 .number-input:active .number-input__input {
   border-color: @basic-blue;
-}
-
-.number-input__units {
-  grid-area: units;
-  justify-self: end;
-  font-weight: 500;
-  .fontsize(16px);
-  letter-spacing: 0.07em;
-  text-transform: uppercase;
-  color: fade(@basic-blue-light, 30%);
-
-  @media (min-width: @tablet-width) {
-    justify-self: start;
-    font-size: 20px;
-    line-height: 18px;
-  }
-
-  @media (min-width: @desktop-width) {
-    align-self: center;
-    margin-left: 34px;
-    letter-spacing: unset;
-    color: @basic-blue-light;
-  }
-
-  &--people {
-    @media (min-width: @tablet-width) {
-      justify-self: start;
-    }
-  }
-
-  &--days {
-    @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
-      position: relative;
-      right: -3px;
-      justify-self: end;
-    }
-  }
 }
