--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,45 +1,51 @@
-// Colors
+// COLORS
+// Basic
 @white: white;
 @black: black;
 @red: red;
-
+// Main
 @basic-blue: #161C35;
 @basic-blue-other: #192144;
 @basic-blue-inner: #182044;
 @basic-blue-light: #1D2E5B;
 @basic-steelblue: #EDEFF6;
 @basic-yellow: #FFD74B;
-
+// Yellows
 @special-yellow-dark: #FFBD30;
 @special-yellow-faded: #F3C72B;
+// Reds
+@special-red: #F47E7E;
+@special-red-darker: #F97676;
+@special-red-saturated: #FF5C23;
+// Oranges
+@special-orange: #FF8D30;
+@special-orange-light: #FFA530;
+@special-orange-dark: #F26926;
+// Blues
 @special-blue: #132576;
-@special-blue-light: #DFE3F0;
 @special-blue-dark: #101D41;
 @special-blue-darkest: #141B3B;
+@special-shadow: rgba(29, 46, 91, 0.14);
+@special-shadow-darker: rgba(54, 80, 148, 0.18);
+@special-blue-light: #DFE3F0;
 @special-steelblue: #D1D7E9;
 @special-steelblue-dark: #D4D9EB;
 @special-darkblue: #D6DAED;
 @special-darkblue-dark: #C8CEE8;
+@special-bluegrey: #E2E5F2;
+@special-border-blue-fade: #959BB2;
+// Greys
 @special-grey: #444444;
 @special-grey-light: #F3F4F8;
 @special-grey-lightest: #F2F2F2;
 @special-grey-border: #CBCED9;
 @special-grey-border-other: #D6D9E6;
 @special-grey-border-dark: #E1E3E9;
-@special-bluegrey: #E2E5F2;
-@special-red: #F47E7E;
-@special-red-darker: #F97676;
-@special-red-saturated: #FF5C23;
-@special-orange: #FF8D30;
-@special-orange-light: #FFA530;
-@special-orange-dark: #F26926;
+// Assorted
 @special-pink: #F9EAEA;
 @special-green: #81E31E;
-@special-border-blue-fade: #959BB2;
-@special-shadow: rgba(29, 46, 91, 0.14);
-@special-shadow-darker: rgba(54, 80, 148, 0.18);
 
-// Viewports
+// VIEWPORTS
 @mobile-width-only: 767px;
 @tablet-width: 768px;
 @tablet-width-only: 1439px;
