--- a/source/less/blocks/level-badge.less
+++ b/source/less/blocks/level-badge.less
@@ -41,10 +41,14 @@
   font-weight: 400;
   .fontsize(14px);
   color: @special-grey;
-  border-top: 1px solid @white;
+  border-top: 1px solid @special-grey;
 
   @media (min-width: @tablet-width) {
     top: -6px;
+  }
+
+  @media (min-width: @desktop-width) {
+    border-color: @white;
   }
 
   &--big {
