Adds country block to styles

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -73,6 +73,7 @@
 @import "blocks/catalog.less";
 @import "blocks/traveler-card.less";
 @import "blocks/traveler-info.less";
+@import "blocks/country.less";
 @import "blocks/pagination.less";
 
 // Blocks -- lost
