Adds z-index for pseudo-hover

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -59,6 +59,7 @@
 @z-index-page-main-title-container: 2;
 @z-index-tooltip: 3;
 @z-index-page-footer: 3;
+@z-index-pseudo-hover: 2;
 // Menu
 @z-index-top-bar-logo: 5;
 @z-index-menu: 4;
