--- a/source/less/blocks/level-badge.less
+++ b/source/less/blocks/level-badge.less
@@ -95,3 +95,9 @@
     top: 23px;
   }
 }
+
+// Traveler card badge
+.level-badge--traveler-card .level-badge__number {
+  top: 13px;
+  left: -15px;
+}
