--- a/source/less/blocks/level-bar.less
+++ b/source/less/blocks/level-bar.less
@@ -1,19 +1,1 @@
-.level-bar__progress {
-  &--companion-card {
-    cx: 30;
-    cy: 30;
-    r: 28;
-  }
-
-  &--traveler-card {
-    cx: 24.5;
-    cy: 24.5;
-    r: 22.5;
-
-    @media (min-width: @tablet-width) {
-      cx: 30;
-      cy: 30;
-      r: 28;
-    }
-  }
-}
+// Level-bar block
