--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -164,7 +164,7 @@
   }
 
   &--white {
-    padding: 14px;
+    padding: 14px 14px 10px;
     .fontsize(17px);
     color: @basic-blue;
     background-color: @white;
@@ -255,7 +255,40 @@
   }
 
   &--dots {
+    margin-left: auto;
     padding: 0;
+
+    &::before {
+      content: "•••";
+      position: absolute;
+      top: 6px;
+      right: 0;
+      display: block;
+      width: 17px;
+      height: 17px;
+      .fontsize(16px);
+      letter-spacing: 0.14em;
+      color: @basic-blue-other;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 4px;
+      right: 0;
+      display: none;
+      width: 17px;
+      height: 17px;
+      background-color: @red;
+    }
+
+    @media (max-width: @mobile-width-only) {
+      position: relative;
+      top: -7px;
+      right: 5px;
+      width: 25px;
+      height: 25px;
+    }
   }
 }
 
