--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,6 +1,6 @@
 .catalog__list {
   margin: 0;
-  margin-bottom: 19px;
+  margin-bottom: 21px;
   padding: 0;
   list-style: none;
 
@@ -27,6 +27,7 @@
 }
 
 .catalog__more-link {
+  position: relative;
   display: block;
   width: 100%;
   margin-bottom: 18px;
@@ -36,6 +37,26 @@
   text-align: center;
   text-transform: uppercase;
   color: @basic-blue-light;
+
+  &::before {
+    content: "";
+    position: relative;
+    top: 3px;
+    left: -3px;
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    margin-right: 12px;
+    background-color: @red;
+  }
+
+  &:hover::before {
+    opacity: 0.6;
+  }
+
+  &:active::before {
+    opacity: 0.3;
+  }
 
   @media (min-width: @tablet-width) {
     .fontsize(20px);
