--- a/source/less/blocks/filter-catalog.less
+++ b/source/less/blocks/filter-catalog.less
@@ -1,6 +1,6 @@
 .filter-catalog {
   margin-bottom: 28px;
-  padding: 26px 25px 22px;
+  padding: 26px 20px 22px;
   background-color: @basic-yellow;
   border-radius: 20px;
 
@@ -16,8 +16,9 @@
 }
 
 .filter-catalog__title {
-  margin: 0 0 23px;
+  margin: 0 0 23px 5px;
   .fontsize(22px);
+  letter-spacing: 0.02em;
   color: @basic-blue-light;
 
   @media (min-width: @tablet-width) {
@@ -33,9 +34,16 @@
   }
 }
 
+.filter-catalog__fieldsets {
+  box-sizing: border-box;
+  padding: 0 4px;
+}
+
 .filter-catalog__fieldset {
+  margin-bottom: 10px;
+
   &:last-of-type {
-    margin-bottom: 21px;
+    margin-bottom: 37px;
   }
 
   @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
@@ -59,16 +67,16 @@
 }
 
 .filter-catalog__legend {
+  position: relative;
   display: block;
   width: 100%;
-  padding: 12px 0 0;
+  padding: 11px 0 0;
   font-weight: 700;
   line-height: 18px;
   text-transform: uppercase;
   color: @basic-blue-light;
   border-top: 1px solid @special-yellow-faded;
   cursor: pointer;
-  .interactions-opacity();
 
   @media (min-width: @tablet-width) {
     position: relative;
@@ -88,6 +96,36 @@
   }
 }
 
+.filter-catalog__legend-text {
+  display: block;
+  margin-left: 2px;
+  .interactions-opacity();
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 70%;
+    right: 1px;
+    display: block;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 6px solid @special-blue-dark;
+    transform: translateY(-50%);
+  }
+}
+
+.filter-catalog__fieldset--open .filter-catalog__legend-text {
+  &::after {
+    top: 65%;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 6px solid @special-blue-dark;
+    border-top: 0;
+  }
+}
+
 .filter-catalog__legend-colon {
   display: none;
 
@@ -97,11 +135,16 @@
 }
 
 .filter-catalog__options {
+  position: relative;
+  top: 12px;
   display: none;
   margin: 0;
-  margin-top: 16px;
   padding: 0;
   list-style: none;
+
+  &:last-of-type {
+    margin-bottom: 19px;
+  }
 
   @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     position: relative;
@@ -114,10 +157,10 @@
   @media (min-width: @desktop-width) {
     margin-top: 23px;
   }
+}
 
-  &--show {
-    display: grid;
-  }
+.filter-catalog__fieldset--open .filter-catalog__options {
+  display: grid;
 }
 
 .filter-catalog__fieldset:first-of-type .filter-catalog__options {
@@ -126,33 +169,65 @@
   }
 }
 
-.filter-catalog__option:not(:last-of-type) {
-  margin-bottom: 12px;
+.filter-catalog__option {
+  margin-bottom: 7px;
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
 
   @media (min-width: @desktop-width) {
     margin-bottom: 16px;
   }
 }
 
+.filter-catalog__checkbox {
+  margin-right: 6px;
+  opacity: 0;
+}
+
 .filter-catalog__label {
+  position: relative;
   font-weight: 400;
   font-size: 15px;
   line-height: 20px;
   color: @black;
   .interactions-opacity();
 
+  &::before {
+    content: "";
+    position: absolute;
+    top: -4px;
+    left: -27px;
+    display: block;
+    width: 18px;
+    height: 18px;
+    background-color: @white;
+    border-radius: 4px;
+  }
+
   @media (min-width: @tablet-width) {
     .fontsize(20px);
   }
 }
 
+.filter-catalog__checkbox:focus + .filter-catalog__label {
+  outline: -webkit-focus-ring-color auto 1px;
+}
+
 .filter-catalog__transport-list {
+  position: relative;
+  top: 15px;
+  left: 2px;
+  display: none;
   margin: 0;
-  margin-top: 19px;
   justify-content: flex-start;
 
+  &:last-of-type {
+    margin-bottom: 25px;
+  }
+
   @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
-    position: relative;
     top: -27px;
     margin-top: 0;
     margin-bottom: 20px;
@@ -163,8 +238,22 @@
   }
 }
 
+.filter-catalog__fieldset--open .filter-catalog__transport-list {
+  display: flex;
+}
+
+.filter-catalog__transport-item {
+  margin-right: 2px;
+
+  &:last-of-type {
+    margin-right: 0;
+  }
+}
+
 .filter-catalog__level-filter {
-  margin-top: 16px;
+  position: relative;
+  top: 12px;
+  display: none;
 
   @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     position: relative;
@@ -178,12 +267,16 @@
   }
 }
 
+.filter-catalog__fieldset--open .filter-catalog__level-filter {
+  display: block;
+}
+
 .filter-catalog__number-inputs {
   position: relative;
   display: grid;
   grid-template-columns: 110px 110px;
   width: 220px;
-  margin-bottom: 21px;
+  margin-bottom: 24px;
   border: 1px solid @special-grey-border;
   border-radius: 4px;
 
@@ -201,7 +294,7 @@
   &::after {
     content: "";
     position: absolute;
-    top: 17px;
+    top: 15px;
     left: 102px;
     display: block;
     width: 16px;
@@ -243,7 +336,7 @@
 }
 
 .filter-catalog__number-input {
-  padding: 13px 8px 8px;
+  padding: 11px 15px 7px;
   font-family: "Blogger Sans", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -254,16 +347,20 @@
   border: 0;
 
   &--left {
+    padding-left: 31px;
     border-right: 1px solid @special-grey-border;
     border-radius: 4px 0 0 4px;
   }
 
   &--right {
+    padding-left: 25px;
     border-radius: 0 4px 4px 0;
   }
 }
 
 .filter-catalog__level-range {
+  width: 95%;
+
   @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     grid-area: range;
   }
@@ -271,6 +368,7 @@
 
 .filter-catalog__button {
   width: 100%;
+  min-width: 229px;
 
   @media (min-width: @tablet-width) {
     .fontsize(20px);
