--- a/source/less/blocks/filter-country.less
+++ b/source/less/blocks/filter-country.less
@@ -26,7 +26,9 @@
 }
 
 .filter-country__wrapper {
-  padding: 50px 25px 15px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 47px 25px 8px;
 
   @media (min-width: @tablet-width) {
     display: flex;
@@ -43,7 +45,9 @@
 
 .filter-country__title {
   display: inline-block;
-  padding: 0 25px;
+  box-sizing: border-box;
+  width: 240px;
+  padding: 0 14px 0 27px;
 
   @media (min-width: @tablet-width) {
     display: none;
@@ -71,7 +75,7 @@
   box-sizing: border-box;
   width: 100%;
   margin: 0;
-  padding: 31px 50px 0;
+  padding: 56px 50px 0;
   background-color: @special-bluegrey;
   list-style: none;
 
@@ -100,6 +104,7 @@
 }
 
 .filter-country__tab {
+  margin-bottom: 5px;
   opacity: 0.3;
 
   &:hover {
@@ -139,6 +144,16 @@
   }
 }
 
+.filter-country--open .filter-country__button {
+  &::before {
+    display: none;
+  }
+
+  &::after {
+    display: block;
+  }
+}
+
 .filter-country__button-text {
   @media (min-width: @tablet-width) {
     display: inline-block;
@@ -150,7 +165,7 @@
 // Menu
 .filter-country__menu-container {
   position: absolute;
-  top: 150px;
+  top: 192px;
   left: 0;
   z-index: @z-index-filter-country-menu;
   display: none;
@@ -173,7 +188,7 @@
 }
 
 .filter-country__menu-wrapper {
-  padding: 46px 25px 28px;
+  padding: 26px 25px 28px;
 
   @media (min-width: @tablet-width) {
     padding: 50px 72px 79px;
@@ -203,7 +218,7 @@
 .filter-country__first-letters {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  margin-bottom: 15px;
+  margin-bottom: 13px;
 
   @media (min-width: @tablet-width) {
     margin-right: 32px;
@@ -216,6 +231,7 @@
 }
 
 .filter-country__first-letter {
+  position: relative;
   padding: 13px;
   font-weight: 500;
   .fontsize(14px);
@@ -223,14 +239,24 @@
   text-transform: uppercase;
   color: @basic-blue-light;
   background-color: @white;
-  border: 1px solid @special-grey-border;
-  border-top: 0;
   cursor: pointer;
 
-  @media (max-width: @mobile-width-only) {
-    &:nth-child(-n+5) {
-      border-top: 1px solid @special-grey-border;
-    }
+  &::before {
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    z-index: @z-index-pseudo-hover;
+    display: none;
+    box-sizing: border-box;
+    width: ~"calc(100% + 2px)";
+    height: ~"calc(100% + 2px)";
+    border: 1px solid @special-grey-border;
+  }
+
+  &:hover::before {
+    display: block;
+    border-color: @basic-blue-light;
   }
 
   @media (min-width: @tablet-width) {
@@ -243,6 +269,10 @@
   &--current {
     color: @white;
     background-color: @basic-blue-light;
+
+    &::before {
+      border-color: @basic-blue-light;
+    }
 
     @media (min-width: @tablet-width) {
       color: @basic-blue-light;
@@ -317,6 +347,19 @@
 
 .filter-country__close {
   width: 100%;
+  letter-spacing: 0.05em;
+
+  &::before {
+    content: "";
+    position: relative;
+    top: 1px;
+    left: -1px;
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    margin-right: 10px;
+    background-color: @red;
+  }
 
   @media (min-width: @tablet-width) {
     .fontsize(20px);
