--- a/source/less/blocks/traveler-info.less
+++ b/source/less/blocks/traveler-info.less
@@ -2,8 +2,8 @@
   position: relative;
   left: 15px;
   display: inline-block;
-  margin: 0;
-  padding: 0 10px;
+  margin: 0 0 10px;
+  padding: 0 10px 0 11px;
   font-weight: 400;
   font-size: 15px;
   line-height: 16px;
@@ -56,7 +56,7 @@
   color: @basic-blue-light;
 
   &:not(:last-child) {
-    margin-bottom: 14px;
+    margin-bottom: 11px;
   }
 
   @media (min-width: @tablet-width) {
