--- a/source/less/blocks/calendar.less
+++ b/source/less/blocks/calendar.less
@@ -91,6 +91,7 @@
 }
 
 .calendar__day {
+  position: relative;
   box-sizing: border-box;
   margin: 0;
   padding: 8px 8px 5px;
@@ -100,15 +101,29 @@
   text-align: center;
   color: @basic-blue-light;
   background-color: @basic-steelblue;
-  outline: 1px solid @special-grey-border-other;
   cursor: pointer;
 
   &:hover {
-    position: relative;
-    z-index: @z-index-calendar-day-hover;
     color: @white;
     background-color: @basic-blue-light;
-    outline: 2px solid @special-red-saturated;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    display: block;
+    box-sizing: border-box;
+    width: ~"calc(100% + 1px)";
+    height: ~"calc(100% + 1px)";
+    border: 1px solid @special-grey-border;
+  }
+
+  &:hover::before {
+    z-index: @z-index-pseudo-hover;
+    border-width: 2px;
+    border-color: @special-red-saturated;
   }
 
   @media (min-width: @tablet-width) {
@@ -116,8 +131,8 @@
     padding: 25px 29px 26px;
     .fontsize(18px);
 
-    &:hover {
-      outline-width: 4px;
+    &:hover::before {
+      border-width: 4px;
     }
   }
 
@@ -138,6 +153,11 @@
     &:hover {
       color: fade(@special-grey, 30%);
       background-color: @white;
+    }
+
+    &:hover::before {
+      border-width: 1px;
+      border-color: @special-grey-border;
     }
   }
 
