Adds pink color and z-index for number input decor

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -43,6 +43,7 @@
 @special-grey-border-dark: #E1E3E9;
 // Assorted
 @special-pink: #F9EAEA;
+@special-pink-saturated: #F9D8D8;
 @special-green: #81E31E;
 
 // VIEWPORTS
@@ -81,3 +82,4 @@
 @z-index-filter-country: 1;
 @z-index-filter-country-menu: -1;
 @z-index-filter-country-tabs: -1;
+@z-index-number-input-decor: 2;
